src/test/deca/syntax/valid/parser/oracle/inequality_expr_fifth_deriv.deca
{
    1 < 2 < 3 < 5.0;
  -"Moon !" < 5.0 < 5 < (--10.0); 5.89 < --50 < 2 < "Hello World !";
}
