src/test/deca/syntax/invalid/test_dir/added/parser/instr_not_separated.deca
{
	println("Hello World !") println("Hello Moon !");
}
